<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7adfb8"
    tools:context=".MainActivity" >

    <include
        android:id="@+id/main_title"
        layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="55dip"
            android:id="@+id/egg"
            android:layout_height="55dip"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/project_detail_cir" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/loginText"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginText2"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <include
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="190dip"
            layout="@layout/input_layout" />

        <include
            android:id="@+id/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            layout="@layout/layout_progress"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_main_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dip"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:paddingBottom="2dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="2dip"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/biometric_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:text="@string/loginText3"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:paddingBottom="2dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="2dip"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>