<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#7adfb8"
    android:orientation="vertical"
    android:padding="10dp">
    <include
        android:id="@+id/main_title"
        layout="@layout/title_layout2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="55dip"
            android:layout_height="55dip"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/project_detail_cir" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/Regist"
            android:textColor="#ffffff"
            android:textSize="24sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Regsubmit"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <include
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="190dip"
            layout="@layout/input_layout2" />
        <include
            android:id="@+id/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            layout="@layout/layout_progress"
            android:visibility="gone" />
        <TextView
            android:id="@+id/btn_register_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dip"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:paddingBottom="2dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="2dip"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="20sp"
            />
    </RelativeLayout>

</RelativeLayout>