<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">
    <!--    做一些控件-->
    <!--    android:id="@+id/bt_1" 用来进行java通讯、绑定事件-->
    <!--    LinearLayout线性布局-->
    <!--    android:layout_针对自己-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello1"
                    android:id="@+id/user_name"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hello1"
                            android:textSize="30sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hello1"
                            android:textSize="30sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_weight="0">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hello1"
                            android:textSize="30sp"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="195dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:text="智能助手"
                    android:textSize="15dp"></TextView>

                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/smart_assistant">
                </ImageView>
                <!--                <LinearLayout-->
                <!--                    android:layout_width="100dp"-->
                <!--                    android:layout_height="100dp"-->
                <!--                    android:layout_marginTop="195dp"-->
                <!--                    android:layout_marginLeft="15dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:background="@drawable/shape">-->
                <!--                </LinearLayout>-->
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="175dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-10dp"
                    android:text="人脸识别"
                    android:textSize="15dp"></TextView>

                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/ai_face"></ImageView>
                <!--                <LinearLayout-->
                <!--                    android:layout_width="100dp"-->
                <!--                    android:layout_height="100dp"-->
                <!--                    android:layout_marginTop="195dp"-->
                <!--                    android:layout_marginLeft="15dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:background="@drawable/shape">-->
                <!--                </LinearLayout>-->
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="195dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:text="我的设备"
                    android:textSize="15dp"></TextView>
                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/mydevices">
                </ImageView>
                <!--                <LinearLayout-->
                <!--                    android:layout_width="100dp"-->
                <!--                    android:layout_height="100dp"-->
                <!--                    android:layout_marginTop="195dp"-->
                <!--                    android:layout_marginLeft="15dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:background="@drawable/shape">-->
                <!--                </LinearLayout>-->
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shadow"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="设备控制"
                        android:textSize="20sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="0dp"
                        android:text="@string/hello1">

                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="-75dp"
                        android:text="@string/hello1">

                    </Button>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/temperature"
                        >
                    </ImageView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temperature"
                        android:textSize="30sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/view_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:text="@string/NoData"
                        android:textSize="30sp"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/led_show"
                        android:background="@drawable/led_close"
                        >
                    </ImageView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Open_Led"
                        android:textSize="30sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Switch
                        android:id="@+id/swh_status1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:textOff=""
                        android:textOn=""
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFF0"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello1"
                    android:textSize="30sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello1"
                    android:textSize="30sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello1"
                    android:textSize="30sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello1"
                    android:textColor="#00F5FF"
                    android:textSize="30sp"

                    >

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:gravity="center">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello1"
                android:textColor="@color/white"
                android:textSize="20sp">

            </Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--        <Button android:layout_width="100dp" android:layout_height="100dp"-->
    <!--                android:id="@+id/bt_1"-->
    <!--                android:background="@drawable/message"-->
    <!--        >-->
    <!--        </Button>-->
    <!--        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"-->
    <!--                  android:textColor="#40E0D0"-->
    <!--                  android:textSize="20sp"-->
    <!--                  android:id="@+id/text_1"-->
    <!--                  android:text="@string/voice">-->

    <!--        </TextView>-->
    <!--        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"-->
    <!--                  android:hint="再次编辑">-->

    <!--        </EditText>-->
    <!--        <ImageView android:layout_width="wrap_content"-->
    <!--                   android:layout_height="wrap_content"-->
    <!--                   android:src="@drawable/Speaker"-->
    <!--        >-->

    <!--        </ImageView>-->
    <!--        <SeekBar android:layout_width="wrap_content" android:layout_height="wrap_content">-->

    <!--        </SeekBar>-->